src/scss/base/_base.scss
// Base styles.

@import "fonts";

// Typography.
* {
	font-family: $family-sans-serif;
}

h1 {
	color: $grey-dark;
	font-size: rem(48);
	font-weight: $font-weight-semibold;
}

h2 {
	color: $grey-dark;
	font-size: rem(48);
	font-weight: $font-weight-medium;
}

h3,
.h3 {
	font-size: rem(24);
	font-weight: $font-weight-bold;
}

p {
	font-size: rem(16);
}

// Links and Buttons.
a {
	color: $blue-alt;
	font-weight: $font-weight-bold;
	text-decoration: none;
}

a:hover,
a:focus {
	background-color: $orange-focus;
}

a:focus {
	outline: none;
}

.wp-block-file__button:hover::before,
.wp-block-file__button:focus::before,
.wp-block-file__button:active::before,
button:hover::before,
button:focus::before,
button:active::before {
	left: rem(4);
	top: rem(4);
}

.wp-block-file__button::-moz-focus-inner,
button::-moz-focus-inner {
	outline: none;
}

.wp-block-file__button:focus,
button:focus {
	outline: none;
}

.wp-block-file__button:-moz-focusring,
button:-moz-focusring {
	color: transparent;
	text-shadow: 0 0 0 $green-dark;
}

// stylelint-disable-next-line
.wp-block-file__button,
button:not(.fl-prefsEditor-buttons) button {
	background-color: $green-light;
	border: 0;
	border-radius: rem(28);
	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
	color: $green-dark;
	font-size: rem(24);
	font-weight: 400;
	height: rem(54);
	line-height: (34 / 24);
	padding: rem(8) rem(34);
	transform: perspective(rem(1)) translateZ(0);
}

// stylelint-disable-next-line
.wp-block-file__button,
button::before:not(.fl-prefsEditor-buttons) button {
	border-radius: rem(26);
	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
	content: '';
	height: rem(54);
	left: 0;
	opacity: 1;
	position: absolute;
	top: 0;
	width: 100%;
}

.wp-block-file {
	text-align: center;

	.wp-block-file__button {
		display: block;
		font-size: rem(14);
		font-weight: $font-weight-medium;
		height: auto;
	}
}

@media screen and (min-width: rem(1024)) {
	h1 {
		font-size: rem(64);
	}

	.wp-block-file {
		text-align: unset;

		.wp-block-file__button {
			display: inline;
		}
	}
}

